--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
     <!-- SEO -->
     <meta name="description" content="Tufailhasan Dafedar — Full Stack Developer. Portfolio showcasing projects, skills, and contact information." />
     <meta name="keywords" content="Tufailhasan, portfolio, full stack developer, React, Node.js, JavaScript, HTML, CSS, Bootstrap" />
-    <link rel="canonical" href="https://your-domain-or-github.pages/"/>
+    <link rel="canonical" href="https://tufaildafedar0-prog.github.io/React-Portfolio/"/>
 
     <!-- Open Graph -->
     <meta property="og:title" content="Tufailhasan Dafedar — Portfolio" />
     <meta property="og:description" content="Full Stack Developer. View projects, skills, and contact information." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-domain-or-github.pages/" />
-    <meta property="og:image" content="/src/assets/img/yorichi.jpg" />
+    <meta property="og:url" content="https://tufaildafedar0-prog.github.io/React-Portfolio/" />
+    <meta property="og:image" content="https://tufaildafedar0-prog.github.io/React-Portfolio/assets/yorichi.jpg" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Tufailhasan Dafedar — Portfolio" />
     <meta name="twitter:description" content="Full Stack Developer. View projects, skills, and contact information." />
-    <meta name="twitter:image" content="/src/assets/img/yorichi.jpg" />
+    <meta name="twitter:image" content="https://tufaildafedar0-prog.github.io/React-Portfolio/assets/yorichi.jpg" />
 
     <!-- Bootstrap & Font Awesome (CDN kept to preserve visuals) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
